--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "facebackend",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "0.10.x",
+    "npm": "2.1.x"
+  },
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js"
